[gd_scene load_steps=10 format=3 uid="uid://cw78amu1t206c"]

[ext_resource type="Script" path="res://scene_switcher.gd" id="1_swgwl"]
[ext_resource type="PackedScene" uid="uid://ige871nt07ne" path="res://start_screen.tscn" id="1_tfkk2"]
[ext_resource type="PackedScene" uid="uid://bbmq3p3y4g2lr" path="res://main_screen.tscn" id="2_ty2yg"]
[ext_resource type="PackedScene" uid="uid://dkpxamh3cujkk" path="res://thermometer_screen.tscn" id="3_fpigl"]
[ext_resource type="PackedScene" uid="uid://do31su411oblb" path="res://calendar_screen.tscn" id="4_alm1a"]
[ext_resource type="PackedScene" uid="uid://cal3i4ptukm7r" path="res://workbench_screen.tscn" id="5_ty7xw"]
[ext_resource type="PackedScene" uid="uid://d1rml3872ffkl" path="res://rack_screen.tscn" id="6_44sp1"]
[ext_resource type="Script" path="res://rack_screen.gd" id="8_is3qu"]
[ext_resource type="PackedScene" uid="uid://jdhhcyo3ybxa" path="res://end_screen.tscn" id="9_2rsic"]

[node name="Root" type="Node"]
script = ExtResource("1_swgwl")

[node name="StartScreen" parent="." instance=ExtResource("1_tfkk2")]

[node name="MainScreen" parent="." instance=ExtResource("2_ty2yg")]

[node name="ThermometerScreen" parent="." instance=ExtResource("3_fpigl")]

[node name="CalendarScreen" parent="." instance=ExtResource("4_alm1a")]

[node name="WorkbenchScreen" parent="." instance=ExtResource("5_ty7xw")]

[node name="RackScreen" parent="." instance=ExtResource("6_44sp1")]
script = ExtResource("8_is3qu")

[node name="EndScreen" parent="." instance=ExtResource("9_2rsic")]

[node name="Timer" type="Timer" parent="."]
one_shot = true
